feat(front): Reading graph by API

--- a/eng/docker/nginx/reverse-proxy.conf
+++ b/eng/docker/nginx/reverse-proxy.conf
@@ -2,6 +2,20 @@ server {
     listen 8080;
 
     location /code-review/api/health {
+      if ($request_method = OPTIONS) {
+          add_header 'Access-Control-Allow-Origin' '*' always;
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+          add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+          add_header 'Access-Control-Max-Age' 1728000 always;
+          add_header 'Content-Length' 0 always;
+          add_header 'Content-Type' 'text/plain; charset=UTF-8' always;
+          return 204;
+      }
+      # Cabeçalhos CORS para demais métodos
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+      add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+
       rewrite /code-review/(api/.*) /$1 break;
       proxy_pass  http://127.0.0.1:5031; #Your server/local IP
       proxy_set_header Upgrade $http_upgrade;
@@ -14,6 +28,20 @@ server {
     }
     
     location /code-review/api {
+      if ($request_method = OPTIONS) {
+          add_header 'Access-Control-Allow-Origin' '*' always;
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+          add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+          add_header 'Access-Control-Max-Age' 1728000 always;
+          add_header 'Content-Length' 0 always;
+          add_header 'Content-Type' 'text/plain; charset=UTF-8' always;
+          return 204;
+      }
+      # Cabeçalhos CORS para demais métodos
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+      add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+
       rewrite /code-review/(api/.*) /$1 break;
       proxy_pass  http://127.0.0.1:5031; #Your server/local IP
       proxy_set_header Upgrade $http_upgrade;
@@ -26,6 +54,20 @@ server {
     }
 
     location /code-review/swagger {
+      if ($request_method = OPTIONS) {
+          add_header 'Access-Control-Allow-Origin' '*' always;
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+          add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+          add_header 'Access-Control-Max-Age' 1728000 always;
+          add_header 'Content-Length' 0 always;
+          add_header 'Content-Type' 'text/plain; charset=UTF-8' always;
+          return 204;
+      }
+      # Cabeçalhos CORS para demais métodos
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+      add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+      
       rewrite /code-review/(swagger/.*) /$1 break;
       proxy_pass  http://127.0.0.1:5031; #Your server/local IP
       proxy_set_header Upgrade $http_upgrade;
@@ -38,6 +80,20 @@ server {
     }
 
     location / {
+      if ($request_method = OPTIONS) {
+          add_header 'Access-Control-Allow-Origin' '*' always;
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+          add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+          add_header 'Access-Control-Max-Age' 1728000 always;
+          add_header 'Content-Length' 0 always;
+          add_header 'Content-Type' 'text/plain; charset=UTF-8' always;
+          return 204;
+      }
+      # Cabeçalhos CORS para demais métodos
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+      add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+      
       rewrite (/.*) /$1 break;
       proxy_pass  http://127.0.0.1:4300; #Your server/local IP
       proxy_set_header Upgrade $http_upgrade;
