--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^19.0.0",
     "@primeng/themes": "^19.0.6",
     "ng2-charts": "^8.0.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
