--- a/.github/workflows/chatgpt-review.yml
+++ b/.github/workflows/chatgpt-review.yml
@@ -31,17 +31,11 @@ jobs:
 
           escaped_code=$(echo $"changed_files" | jq -s -R -r @json)
 
-          models=$(curl https://api.openai.com/v1/models \
-            -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" 
-            )
-
-          echo "This is the models $models"
-
           response=$(curl https://api.openai.com/v1/chat/completions \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -d '{
-              "model": "o3-mini",
+              "model": "gpt-4o",
               "reasoning_effort": "high"
               "messages": [
                 {"role": "system", "content": "${{ vars.CODE_REVIEW_PROMPT }}"},
@@ -49,6 +43,7 @@ jobs:
               ],
               "temperature": 0.7
             }')
+            
           echo "This is the response $response"
 
 
