--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "sakai-ng",
-    "version": "19.0.0",
+    "name": "code-review-analyzer",
+    "version": "1.0.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
